--- a/app/src/main/res/xml/clock_calendar_info.xml
+++ b/app/src/main/res/xml/clock_calendar_info.xml
@@ -2,7 +2,7 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:minWidth="40dp"
     android:minHeight="40dp"
-    android:updatePeriodMillis="1000"
+    android:updatePeriodMillis="18000000"
     android:previewImage="@drawable/ic_drawing_cropped_plain_white"
     android:initialLayout="@layout/clock_layout"
     android:resizeMode="horizontal|vertical"
